🎨 Fix CSS integration issue
✨ Improvements:
- Updated client plugin to auto-import CSS
- Added comprehensive CSS integration guide
- Enhanced package exports for better CSS handling
- Version bump to 0.1.1

📚 Added CSS-INTEGRATION.md with multiple import methods
🐛 Resolves CSS styles not showing issue

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitepress-plugin-sidebar-tags",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A powerful VitePress plugin to automatically add diverse tags to sidebar based on frontmatter",
   "type": "module",
   "main": "dist/index.js",
@@ -17,7 +17,8 @@
   },
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "CSS-INTEGRATION.md"
   ],
   "scripts": {
     "build": "vite build",
