--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitepress-plugin-sidebar-tags",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A powerful VitePress plugin to automatically add diverse tags to sidebar based on frontmatter",
   "type": "module",
   "main": "dist/index.js",
@@ -9,10 +9,6 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    },
-    "./style.css": "./dist/style.css",
-    "./client": {
-      "import": "./dist/client.js"
     }
   },
   "files": [
@@ -24,7 +20,7 @@
     "build": "vite build",
     "dev": "vite build --watch",
     "prepublishOnly": "npm run build",
-    "test": "node debug-helper.cjs"
+    "test": "node test/plugin.test.js"
   },
   "keywords": [
     "vitepress",
@@ -61,6 +57,7 @@
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "^3.0.0",
     "vitepress": "^1.0.0"
   },
   "engines": {
