--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitepress-plugin-sidebar-tags",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A powerful VitePress plugin to automatically add diverse tags to sidebar based on frontmatter",
   "type": "module",
   "main": "dist/index.js",
@@ -9,7 +9,9 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    }
+    },
+    "./style.css": "./dist/style.css",
+    "./client": "./dist/client.js"
   },
   "files": [
     "dist",
