--- a/example/package.json
+++ b/example/package.json
@@ -8,8 +8,8 @@
     "serve": "vitepress serve docs"
   },
   "devDependencies": {
-    "vue": "3.2.44",
-    "vitepress": "1.0.0-alpha.28"
+    "vitepress": "^1.6.3",
+    "vue": "^3.3.4"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -17,5 +17,8 @@
         "@algolia/client-search"
       ]
     }
+  },
+  "dependencies": {
+    "vitepress-plugin-sidebar-tags": "^0.2.3"
   }
 }
