--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite build --watch",
-    "test": "node test/plugin.test.js"
+    "test": "jest"
   },
   "keywords": [
     "vitepress",
@@ -47,13 +47,18 @@
     "url": "https://github.com/AlienHub/vitepress-plugin-sidebar-tags/issues"
   },
   "homepage": "https://github.com/AlienHub/vitepress-plugin-sidebar-tags#readme",
+  "dependencies": {
+    "gray-matter": "^4.0.3"
+  },
   "peerDependencies": {
     "vitepress": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "jest": "^29.0.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "^4.0.0",
     "vitepress": "^1.0.0"
   }
 } 
